--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         </svg>
                     </div>
                     <div>
-                        <h1 class="text-base sm:text-2xl font-bold text-gray-800">TOKO BAROKAH</h1>
+                        <h1 class="text-base sm:text-2xl font-bold text-gray-800">TOKO PAKDE</h1>
                         <p class="text-xs sm:text-sm text-gray-600">RT 02 Desa Pematang Gadung</p>
                     </div>
                 </div>
